Fix a crash in Filter Brush when changing the filter type

We should fetch current filter id from the actual filter, not
from the combo box.

BUG:478419